屏蔽了进度条

--- a/MediaPlayerDemo/res/layout/activity_main.xml
+++ b/MediaPlayerDemo/res/layout/activity_main.xml
@@ -4,18 +4,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <io.vov.vitamio.widget.CenterLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+
+        <!--
+         <io.vov.vitamio.widget.CenterLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+        -->
 
         <io.vov.vitamio.widget.VideoView
             android:id="@+id/buffer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
-    </io.vov.vitamio.widget.CenterLayout>
+            android:layout_centerVertical="true"
+            android:onClick="onClick" />
+
+        <ImageView
+            android:id="@+id/player_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/play_btn"
+            android:visibility="gone" />
+        <!-- </io.vov.vitamio.widget.CenterLayout> -->
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
