--- a/MediaPlayerDemo/res/layout/activity_main.xml
+++ b/MediaPlayerDemo/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
         android:orientation="vertical" >
 
         <!--
@@ -22,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:onClick="onClick" />
+         />
 
         <ImageView
             android:id="@+id/player_btn"
